# BotCore

./: .gitignore  .monconfig  README.md  bot.py  pyproject.toml
Config/: napcat.json
Script/EnvTools/linux/: check_env.sh  install_env.sh  remove_env.sh
Script/EnvTools/win/: check_env.ps1  install_env.ps1  remove_env.ps1
src/: README.md
src/System/: README.md  __init__.py
src/System/LogCleaner/: __init__.py  cleaner.py  cli.py  config.py
src/System/Logs/: __init__.py
src/System/MonConfig/: __init__.py  loader.py
src/System/Rendering/: README.md  __init__.py  example.py
src/System/Rendering/components/: __init__.py  panel.py
src/System/Rendering/config/: __init__.py  themes.py
src/System/Rendering/core/: __init__.py  canvas.py  printer.py
src/System/Rendering/exporters/: __init__.py  svg_exporter.py
src/System/Rendering/renderers/: __init__.py  table.py
src/plugins/: __init__.py
src/plugins/BotCore/: README.md  __init__.py  app.py
src/plugins/BotCore/config/: __init__.py  bot_config.py  config.json
src/plugins/BotCore/core/: __init__.py
src/plugins/BotCore/core/business/: __init__.py
src/plugins/BotCore/core/business/command/: __init__.py  command_service.py
src/plugins/BotCore/core/router/: __init__.py  commands.py  message_handlers.py
src/plugins/BotCore/core/utils/: __init__.py  audio_utils.py
src/plugins/BotCore/plugins/: __init__.py  image_plugin.py  voice_plugin.py
src/plugins/BotCore/plugins/command/: __init__.py  command_plugin.py
src/plugins/BotCore/plugins/text/: __init__.py  text_plugin.py
(+5 files in other folders)
