[project]
name = "BotCore"
version = "0.1.0"
description = "BotCore"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "pyzmq>=25.0.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["src.plugins.BotCore"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]

[tool.monbot.hub]
ip = "127.0.0.1"
port = 40051
query_timeout = 5.0

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
